alignment fix

--- a/src/styles/chatScreen.css
+++ b/src/styles/chatScreen.css
@@ -371,7 +371,9 @@
     -webkit-flex-wrap: nowrap;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap;
-    padding: 30px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     overflow: hidden;
   }
   .gx-chat-main-header {
